.provarCaches/00D6C0000000xA6UAI/objects/LiveChatTranscript.object
<CustomObject>
    <fields>
        <fullName>End_Time_In_Sec__c</fullName>
        <formula>TEXT(EndTime - 4/24)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End Time In Sec</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Handle_Time_Readability__c</fullName>
        <formula>IF (( EndTime - StartTime )&gt; 0, 
TEXT(FLOOR((EndTime - StartTime))) &amp; &quot;:&quot; &amp; 
TEXT(FLOOR( 24 * ((EndTime - StartTime) - FLOOR((EndTime - StartTime))))) &amp; &quot;:&quot; &amp; 
TEXT(ROUND(60 * (ROUND( 24 * ((EndTime - StartTime)-FLOOR((EndTime - StartTime))),8) - FLOOR( 
ROUND( 24 * ((EndTime - StartTime)- FLOOR((EndTime - StartTime))),8)) ),0))&amp; &quot;:&quot; &amp; 
TEXT(Round(60*(((EndTime - StartTime) *1440) - FLOOR(((EndTime - StartTime) *1440))),0)) 
, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Handle Time (Readability)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Handle_Time__c</fullName>
        <formula>( EndTime - StartTime ) *24*3600</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Handle Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Request_Time_In_sec__c</fullName>
        <formula>TEXT(RequestTime -4/24)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Request Time In sec</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Respond_Time__c</fullName>
        <formula>(StartTime - RequestTime)*86400</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Respond Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Seconds__c</fullName>
        <formula>SECOND( Time_Var__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Seconds</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Seconds_til_next_Owner__c</fullName>
        <label>Seconds til next Owner</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_time_in_Sec__c</fullName>
        <formula>TEXT(StartTime - 4/24)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start Time In Sec</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Testing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Testing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Time_Var__c</fullName>
        <label>Time_Var</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Transferred_Time_Stamp__c</fullName>
        <formula>NOW()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Transferred Time Stamp</label>
        <type>DateTime</type>
    </fields>
    <listViews>
        <fullName>All1</fullName>
        <columns>Name</columns>
        <columns>LiveChatVisitor</columns>
        <columns>StartTime</columns>
        <columns>EndTime</columns>
        <columns>Status</columns>
        <columns>Case</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Missed_Chats2</fullName>
        <columns>Name</columns>
        <columns>LiveChatVisitor</columns>
        <columns>StartTime</columns>
        <columns>EndTime</columns>
        <columns>Status</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>CreatedDate</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>Missed Chats</label>
    </listViews>
    <listViews>
        <fullName>Tier_2_Chat_LiveChatTranscript</fullName>
        <filterScope>Queue</filterScope>
        <label>Tier 2 Chat</label>
        <queue>Tier_2_Chat</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Tier_3_Chat_LiveChatTranscript</fullName>
        <filterScope>Queue</filterScope>
        <label>Tier 3 Chat</label>
        <queue>Tier_3_Chat</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <sharingModel>Read</sharingModel>
</CustomObject>